Feat: dynamic form example

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "@core/*": ["src/modules/core/*"],
       "@utils/*": ["src/utils/*"],
       "@pages/*": ["src/pages/*"],
+      "@pecc/*": ["src/modules/pecc/*"],
     }
   },
   "include": ["src"],
